<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Battleships</string>

    <string name="strLogin">Login</string>
    <string name="strLogout">Logout</string>
    <string name="strRegister">Register</string>
    <string name="strGast">Guest</string>
    <string name="strSingleplayer">Singleplayer</string>
    <string name="strMultiplayer">Multiplayer</string>

    <string name="strName">Name</string>
    <string name="strPwd">Password</string>
    <string name="strPwdRpt">Repeat Password</string>
    <string name="strLoginFailed">Your Username or Password is Wrong</string>
    <string name="strTextViewReg">No Account?</string>
    <string name="strGuestLogin">Login As Guest</string>
    <string name="strAgain">Again</string>
    <string name="strBackToMenu">Back to main menu</string>
    <string name="strWon">You won!</string>
    <string name="strLost">You lost!</string>
    <string name="strGameOver" translatable="false">Game Over!</string>
    <string name="strVictory">Victory!</string>
    <string name="strBtnSettings">Settings</string>
    <string name="strLogoutCompleted">You logged out successfully</string>
    <string name="strWaitingForPlayer">Waiting for other player....</string>
    <string name="strYourCode">Your code is:</string>
    <string name="strShipsPlacedPlayer">\n \nHere are your ships placed.</string>
    <string name="strShipsPlacedEnemy">\n \nHere are the enemy ships placed.</string>
    <string name="strPwdDontMatch">Passwords don\'t Match</string>
    <string name="strNoName">You need to choose a name!</string>
    <string name="strNameTaken">Your name is already taken!</string>
    <string name="strPwdNeeded">A password is needed!</string>
    <string name="strUserCreated">User Created</string>
    <string name="strHelp">Server:\nGive your partner the shown number.\n\nClient:\nPaste the number given by your Friend.</string>
    <string name="strOk">Ok</string>
    <string name="strHelpTitle">Help</string>
    <string name="strSound">Mute sound</string>
    <string name="strMusic">Mute music</string>
    <string name="strSpecialSkin">Use the Special Skin</string>
    <string name="strSave">Save</string>
    <string name="strCancelCaps" translatable="false">CANCEL</string>
    <string name="strCheckNetwork">Please check your network!</string>
    <string name="strReadyCaps" translatable="false">READY</string>
    <string name="strMode">mode</string>
    <string name="strServer">server</string>
    <string name="strHostNotFound">Can´t find host :(</string>
    <string name="strCancel">Cancel</string>
</resources>