<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!---android:background="@drawable/background"> -->

    <Button
        android:id="@+id/btnSingleplayer"
        android:text="@string/strSingleplayer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnMultiplayer"
        android:text="@string/strMultiplayer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/btnSingleplayer"
        android:layout_alignStart="@+id/btnSingleplayer" />

    <Button
        android:id="@+id/btnSettings"
        android:text="@string/strBtnSettings"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/btnMultiplayer"
        android:layout_alignStart="@+id/btnMultiplayer" />

    <Button
        android:id="@+id/btnLogout"
        android:text="@string/strLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/btnSettings"
        android:layout_alignStart="@+id/btnSettings"
        android:layout_alignEnd="@+id/btnSettings" />

    <TextView
        android:text="Hauptmenü"
        android:textSize="36sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" />

    <TextView
        android:id="@+id/textViewUsername"
        android:text="@string/strGast"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="Server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnServer"
        android:layout_above="@+id/btnSettings"
        android:layout_alignStart="@+id/textView"
        android:visibility="gone"
        android:alpha="0"/>

    <Button
        android:text="Client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnClient"
        android:layout_alignBaseline="@+id/btnMultiplayer"
        android:layout_alignBottom="@+id/btnMultiplayer"
        android:layout_alignEnd="@+id/textView"
        android:visibility="gone"
        android:alpha="0"/>

    <EditText
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextCode"
        android:alpha="0"
        android:visibility="gone"
        android:hint="code"
        android:textAlignment="center"
        android:layout_above="@+id/btnSettings"
        android:layout_toEndOf="@+id/textView" />

    <Button
        android:text=" ? "
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnHelp"
        android:layout_alignTop="@+id/btnLogout"
        android:layout_alignEnd="@+id/textViewUsername" />


</RelativeLayout>