<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <RelativeLayout android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_margin="10dp"
            android:text="@string/strSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/checkBoxSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_margin="10dp"
            android:text="@string/strMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/checkBoxMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/strSpecialSkin"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/switchSpecialSkin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


</LinearLayout>