<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background">


    <EditText
        android:id="@+id/editTextRegName"
        android:hint="@string/strName"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:inputType="text"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="41dp" />

    <EditText
        android:id="@+id/editTextRegPwd"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:hint="@string/strPwd"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColorHint="@color/colorTextHint"
        android:textColor="@color/colorText"
        android:layout_below="@+id/editTextRegName"
        android:layout_alignStart="@+id/editTextRegName" />

    <EditText
        android:id="@+id/editTextRegPwdRpt"
        android:hint="@string/strPwdRpt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColorHint="@color/colorTextHint"
        android:textColor="@color/colorText"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/editTextRegName"
        android:layout_alignStart="@+id/editTextRegPwd" />

    <Button
        android:text="Confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegisterConfirm"
        android:layout_marginEnd="50dp"
        android:layout_alignTop="@+id/editTextRegName"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="17dp" />

    <Button
        android:text="Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegisterCancel"
        android:layout_below="@+id/btnRegisterConfirm"
        android:layout_alignStart="@+id/btnRegisterConfirm"
        android:layout_marginTop="11dp" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/editTextRegPwdRpt"
        android:layout_alignEnd="@+id/editTextRegPwdRpt" />



</RelativeLayout>